# nltk-3-4-5

./: .gitignore  .python-version  README.md  pyproject.toml
output/: amateur_callsign_prefixes.json  context_lexicon.json  domain_audit.json  domain_audit.md  foundation_lexicon.json
src/nltk_3_4_5/: __init__.py  cli.py  generator.py  lexicon.py
tests/: test_generator.py  test_lexicon.py
