[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nltk-3-4-5"
version = "0.1.0"
description = "Generate separate 3-, 4-, and 5-letter English word lists using NLTK corpora."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Parky" }
]
dependencies = [
    "nltk>=3.9.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
nltk-3-4-5 = "nltk_3_4_5.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
